--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="test">Phone-Number-Auth</div>
 
         <form action="" >
-            <input type="text" name="" id="number" placeholder="090.....">
+            <input type="password" name="" id="number" placeholder="090.....">
             <div id="recaptha-container"></div>
             <button type="button" onclick="phoneAuth();">コードを送る</button>
         </form><br>
